--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+*{
+    font-family: "Ubuntu", sans-serif;
+}
+
 .navbar{
     padding: 2rem;
     background-color: #f5f6f7;
@@ -6,4 +12,41 @@
 .navbar-collapse{
     align-items: center;
     justify-content: space-between;
+}
+
+.hero{
+    background-color: #f5f6f7;
+    min-height:450px ;
+    text-align: center;
+}
+
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1{
+    font-size: 2.5rem;
+}
+
+.mepic{
+    border-radius: 100%;
+    margin: 20px;
+    transition: transform 0.3s ease;
+}
+
+.mepic:hover{
+    transform: scale(1.1);
+    
+}
+
+.hero-principal{
+    padding: 3rem;
+}
+
+.hero-principal h2{
+    font-size: 1.5rem;
+    color: #615151;
 }
