--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -50,3 +50,19 @@ h1{
     font-size: 1.5rem;
     color: #615151;
 }
+
+.hero-inferior{
+    display: flex;
+    justify-content: center;
+}
+
+.hero-inferior-img{
+    width: 60%;
+}
+
+
+@media screen and (max-width: 700px){
+    .hero-inferior-img{
+        width:100% !important;
+    }
+}
